# arcfield

./: .env.example  .gitignore  AI_DISCLOSURE.md  DESIGN.md  Dockerfile  FINAL_REVIEW.md  QA_REPORT.md  README.md  RESILIENCE.md  docker-compose.yml  go.mod  pyproject.toml
alembic/: env.py
alembic/versions/: 33cf03689587_add_request_hash_to_idempotency_keys.py  a004a8b0dbbe_create_initial_schema.py
cmd/server/: main.go
docs/: AI_DISCLOSURE.md  DESIGN.md  RESILIENCE.md
internal/config/: config.go
internal/database/: postgres.go
internal/database/migrations/: 001_initial_schema.sql
src/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
tests/: __init__.py  conftest.py  run_stress_test.py  test_durability.py  test_health.py  test_purchase.py  test_rewards.py  test_wallet.py
